i cant seem to figure out my CSS sheet

--- a/test.css
+++ b/test.css
@@ -1,6 +1,13 @@
-body{
-	background-color: red;
-}
+
 .big{
 font-size: 60px;
+}
+.about_me{
+	font-size: 50px;
+}
+.small{
+	font-size: 20px;
+}
+.header{
+	font-size: 40px;
 }
