--- a/test.css
+++ b/test.css
@@ -3,11 +3,18 @@
 font-size: 60px;
 }
 .about_me{
-	font-size: 50px;
+	height: 400px;
+	width: 25%;
+	background-color: green;
+	font-size: 20px;
 }
 .small{
 	font-size: 20px;
 }
 .header{
+	text-align: center;
+	background-color: blue;
+	width: 90%;
 	font-size: 40px;
+	font-style: italic;
 }
