--- a/test.css
+++ b/test.css
@@ -1,20 +1,67 @@
-
+body{
+	margin: 50px;
+}
 .big{
 font-size: 60px;
-}
-.about_me{
-	height: 400px;
-	width: 25%;
-	background-color: green;
-	font-size: 20px;
 }
 .small{
 	font-size: 20px;
 }
 .header{
-	text-align: center;
+	align-self: center;
+	text-align: middle;
 	background-color: blue;
 	width: 90%;
 	font-size: 40px;
 	font-style: italic;
+}
+.projects{
+	grid-column: 1;
+	grid-row: 1;
+	background-color: green;
+	font-size: 3vh;
+	font-style: bold;
+	max-width: 500px;
+	border-radius: 5px;
+}
+.blog{
+	grid-column: 2;
+	grid-row: 1;
+	background-color: green;
+	font-size: 3vw;
+	max-width: 500px;
+	border-radius: 5px;
+}
+.social{
+	grid-column:1;
+	grid-row: 2;
+	background-color: green;
+	font-size: 3vw;
+	max-width: 500px;
+	border-radius: 5px;
+}
+.photo_scrl{
+	grid-column:2;
+	grid-row:2;
+	background-color: green;
+	max-width: 500px;
+	border-radius: 5px;
+}
+.about_me{
+	grid-column: 3;
+	grid-row: 1/3;
+	background-color: green;
+	font-size: 3vw;
+	max-width: 500px;
+	border-radius: 5px;
+	}
+.footer{
+	background-color: grey;
+	font-size: 10px;
+	text-align: right;
+}
+.grid-container{
+	display: grid;
+	grid-gap: 6vw;
+	grid-auto-columns: 1fr;
 }
